# terraform-gcp-sample-1

./: .gitignore  CLAUDE.md  README.md  gcloud_login.sh  sonar-project.properties  tf.sh  tf_state_fix.txt
.circleci/: config.yml
central/: .terraform.lock.hcl  backend.tf  bigquery_datasets.tf  billing.tf  circleci_wif.tf  cloud_logging_metrics.tf  cloud_monitoring.tf  compliance_scanner_soc2.tf  datadog.tf  github_actions_wif.tf  notification_channels.tf  organization_folders.tf  organization_iam_group_roles_bi_analyst.tf  organization_iam_group_roles_for_backend_engineers_dev.tf  organization_iam_group_roles_for_backend_engineers_prod.tf  organization_iam_group_roles_for_deployment_engineers_prod.tf  organization_iam_group_roles_for_infra_engineers_central.tf  organization_iam_group_roles_for_infra_engineers_dev.tf  organization_iam_group_roles_for_infra_engineers_org_level.tf  organization_iam_group_roles_for_infra_engineers_prod.tf  organization_iam_group_roles_for_ml_engineers_prod.tf  organization_iam_group_roles_for_qa_engineers_dev.tf  organization_iam_group_roles_for_qa_engineers_prod.tf  organization_iam_group_roles_for_security_reviewer_dev.tf  organization_iam_group_roles_for_security_reviewer_org_level.tf  organization_iam_group_roles_for_security_reviewer_prod.tf  organization_iam_groups.tf  organization_iam_principals.tf  outputs.tf  project.tf  remote_state.tf  subnet_dmz.tf  subnet_private.tf  terraform.tfvars  variables.tf  versions.tf  vpc.tf
deployment/: .terraform.lock.hcl  (+69 more)
scripts/vllm/custom_lora_plugin/: gcs_bucket_resolver.py  pyproject.toml
(+266 files in other folders)
